<resources>
    <string name="app_name">Valley</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="report">Report</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="the_world_of_it">The world of IT</string>
    <string name="action_sort">Sort</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type event tag</string>
    <string name="search">Search</string>
    <string name="app_info">App: Valley 1.0\nDevelopers: SoftM\nThe world of IT!</string>
    <string name="address_label">Address</string>
</resources>
